--- a/embed/assets/css/index.css
+++ b/embed/assets/css/index.css
@@ -2923,3 +2923,23 @@ body.single .top>.gui .item.guiEmbedName {
 .guiEmbedAdd .icon {
     margin-right: 7px;
 }
+
+.tc {
+    text-align: center;
+}
+
+.yellow {
+    color: gold;
+}
+
+.w-auto {
+    width: auto;
+}
+
+.border-box,a,article,body,code,dd,div,dl,dt,fieldset,footer,form,h1,h2,h3,h4,h5,h6,header,html,input[type=email],input[type=number],input[type=password],input[type=tel],input[type=text],input[type=url],legend,li,main,ol,p,pre,section,table,td,textarea,th,tr,ul {
+    box-sizing: border-box
+}
+
+.whitney {
+    font-family: Whitney,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
+}
